# llm-knowledge-distillation-pdf

./: .env.example  README.md  langchain_teacher_student_pdf_pipeline.ipynb  pyproject.toml  teacher_to_student_openai_ollama_qwen_pdf_pipeline.ipynb
notebooks/: langchain_teacher_student_pdf_pipeline.ipynb  teacher_to_student_openai_ollama_qwen_pdf_pipeline.ipynb
src/ts_pdf_pipeline/: __init__.py  cli.py  config.py  factories.py
src/ts_pdf_pipeline/domain/: __init__.py  exceptions.py  models.py  types.py
src/ts_pdf_pipeline/llms/: __init__.py  student_langchain.py  student_ollama_rest.py  teacher_langchain.py  teacher_openai_sdk.py
src/ts_pdf_pipeline/loaders/: __init__.py  pdfplumber_loader.py
src/ts_pdf_pipeline/pipeline/: __init__.py  teacher_student.py
src/ts_pdf_pipeline/prompts/: __init__.py  student_prompts.py  teacher_prompts.py
src/ts_pdf_pipeline/storage/: __init__.py  artifacts.py  event_sinks.py  jsonl_store.py  kb_sqlite.py
src/ts_pdf_pipeline/utils/: __init__.py  json_utils.py  time_utils.py
tests/: test_smoke_pipeline.py
